feat: Setup cache dir for unmanic

--- a/helmfiles/media/values/unmanic/common.yaml
+++ b/helmfiles/media/values/unmanic/common.yaml
@@ -48,3 +48,7 @@ persistence:
     enabled: true
     type: hostPath
     hostPath: /samba
+  cache:
+    enabled: true
+    type: hostPath
+    hostPath: /samba/.unmanic_cache
