feat: Setup renovate to create single MR instead of multiple

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,6 +28,17 @@
       "description": "MajorUpgrade",
       "matchUpdateTypes": ["major"],
       "minimumReleaseAge": "7 days"
+    },
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "groupName": "all non-major dependencies",
+      "groupSlug": "all-minor-patch"
     }
   ]
 }
