--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -127,8 +127,8 @@ grafana:
       root_url: https://grafana.szymonrichert.pl/
     smtp:
       enabled: true
-      host: "email-smtp.eu-central-1.amazonaws.com:465"
-      from_address: "monitoring@szymonrichert.pl"
+      host: "smtp.gmail.com:587"
+      from_address: "szymon.rychu@gmail.com"
     database:
       type: postgres
       host: grafana-database-cluster-rw:5432
