feat: Add terraform plan in pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ terraform/**/.terraform
 terraform/**/terraform.tfstate
 terraform/**/terraform.tfstate.backup
 terraform/**/.terraform.lock.hcl
+terraform/**/terraform.tfvars
