--- a/.github/workflows/helmfile.yaml
+++ b/.github/workflows/helmfile.yaml
@@ -15,10 +15,50 @@ on:
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
 
+env:
+  TERRAFORM_VERSION: 1.8.2
 
 jobs:
+  terraform:
+    runs-on: [self-hosted, linux, X64]
+    name: Terraform Plan
+    steps:
+      - name: Setup terraform
+        run: |
+          wget -qO /tmp/terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+          unzip -u -d /tmp/ /tmp/terraform.zip
+          sudo mv /tmp/terraform /usr/local/bin/terraform
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Terraform init
+        env:
+          TERRAFORM_TFVARS: ${{ secrets.TERRAFORM_TFVARS }}
+        run: |
+          cd terraform
+          echo "${TERRAFORM_TFVARS}" | base64 --decode > terraform.tfvars
+          terraform init
+
+      - name: Terraform plan
+        if: github.ref != 'refs/heads/main'
+        run: |
+          cd terraform
+          terraform plan -lock-timeout=600s
+
+      - name: Terraform apply
+        if: github.ref == 'refs/heads/main'
+        run: |
+          cd terraform
+          terraform apply -auto-approve -lock-timeout=600s
+
   list_changed_releases:
     runs-on: ubuntu-latest
+    needs: terraform
     name: List changed releases
     outputs:
       changed_releases: ${{ steps.changed_releases.outputs.changed_releases }}
