--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -176,20 +176,19 @@ prometheus:
           resources:
             requests:
               storage: 100Gi
-    additionalScrapeConfigs:
-      - job_name: nas
-        metrics_path: /metrics
-        static_configs:
-          - targets:
-            - 192.168.1.72:9100
-      - job_name: nas-gpu
-        metrics_path: /metrics
-        static_configs:
-          - targets:
-            - 192.168.1.72:9400
+
 
 prometheus-node-exporter:
   hostNetwork: false
+  prometheus:
+    monitor:
+      relabelings:
+        - sourceLabels: [__meta_kubernetes_pod_node_name]
+          separator: ;
+          regex: ^(.*)$
+          targetLabel: nodename
+          replacement: $1
+          action: replace
 
 alertmanager:
   enabled: false
