--- a/helmfiles/monitoring/values/grafana-database/common.yaml
+++ b/helmfiles/monitoring/values/grafana-database/common.yaml
@@ -24,7 +24,7 @@ cluster:
     podMonitor:
       enabled: true
     prometheusRule:
-      enabled: true
+      enabled: false
     customQueries:
       - name: "pg_cache_hit_ratio"
         query: "SELECT current_database() as datname, sum(heap_blks_hit) / (sum(heap_blks_hit) + sum(heap_blks_read)) as ratio FROM pg_statio_user_tables;"
