feat: Use separate grafana dashboard to increase it's upgrade frequency

--- a/helmfiles/monitoring/helmfile.yaml
+++ b/helmfiles/monitoring/helmfile.yaml
@@ -57,6 +57,18 @@ releases:
     application: prometheus
   <<: *default
 
+- name: grafana
+  namespace: monitoring
+  chart: grafana/grafana
+  version: 8.5.1
+  needs:
+  - monitoring/grafana-database
+  - monitoring/prometheus
+  labels:
+    purpose: monitoring
+    application: grafana
+  <<: *default
+
 - name: smartctl-exporter
   namespace: monitoring
   chart: prometheus-community/prometheus-smartctl-exporter
