--- a/helmfiles/coding/helmfile.yaml
+++ b/helmfiles/coding/helmfile.yaml
@@ -1,6 +1,10 @@
 repositories:
 - name: szymonrychu
   url: https://szymonrychu.github.io/selfhosted-kubernetes-charts
+- name: harbor
+  url: https://helm.goharbor.io
+- name: cnpg
+  url: https://cloudnative-pg.github.io/charts
 templates:
   default: &default
     disableValidation: true
@@ -37,4 +41,25 @@ releases:
   labels:
     purpose: editor
     application: code-server
+  <<: *default
+
+- name: harbor-database
+  chart: cnpg/cluster
+  namespace: harbor
+  version: 0.0.11
+  force: true
+  labels:
+    purpose: coding
+    application: harbor-database
+  <<: *default
+
+- name: harbor
+  version: 1.15.1
+  chart: harbor/harbor
+  namespace: harbor
+  needs:
+  - harbor/harbor-database
+  labels:
+    purpose: coding
+    application: harbor
   <<: *default
