feat: Update rook to talk over host network

--- a/helmfiles/storage/values/rook-ceph-cluster/common.yaml
+++ b/helmfiles/storage/values/rook-ceph-cluster/common.yaml
@@ -20,6 +20,9 @@ toolbox:
       memory: "128Mi"
 
 cephClusterSpec:
+  network:
+    connections:
+      provider: host
   placement:
     all:
       nodeAffinity:
