--- a/helmfiles/home-automation/helmfile.yaml
+++ b/helmfiles/home-automation/helmfile.yaml
@@ -1,6 +1,3 @@
-repositories:
-- name: szymonrychu
-  url: https://szymonrychu.github.io/selfhosted-kubernetes-charts
 environments:
   lab: {}
 templates:
@@ -31,7 +28,7 @@ templates:
 releases:
 
 - name: esphome
-  chart: szymonrychu/esphome
+  chart: oci://ghcr.io/szymonrychu/helm-charts/esphome
   version: 3.0.12
   namespace: home-automation
   labels:
@@ -50,7 +47,7 @@ releases:
   <<: *default
 
 - name: home-assistant
-  chart: szymonrychu/home-assistant
+  chart: oci://ghcr.io/szymonrychu/helm-charts/home-assistant
   version: 0.11.15
   namespace: home-automation
   needs:
