--- a/helmfiles/storage/helmfile.yaml
+++ b/helmfiles/storage/helmfile.yaml
@@ -1,8 +1,6 @@
 repositories:
 - name: stable
   url: https://charts.helm.sh/stable
-- name: szymonrychu
-  url: https://szymonrychu.github.io/selfhosted-kubernetes-charts
 - name: rook-release
   url: https://charts.rook.io/release
 templates:
@@ -36,7 +34,7 @@ templates:
 releases:
 
 - name: local-path-provisioner
-  chart: szymonrychu/local-path-provisioner
+  chart: oci://ghcr.io/szymonrychu/helm-charts/local-path-provisioner
   namespace: storage-system
   version: 0.0.24
   labels:
@@ -45,7 +43,7 @@ releases:
   <<: *default
 
 - name: snapshot-controller
-  chart: szymonrychu/snapshot-controller
+  chart: oci://ghcr.io/szymonrychu/helm-charts/snapshot-controller
   namespace: storage-system
   version: 2.0.4
   labels:
