--- a/helmfiles/authentication/values/keycloak-database/common.yaml
+++ b/helmfiles/authentication/values/keycloak-database/common.yaml
@@ -1,3 +1,7 @@
+version:
+  # renovate: image=ghcr.io/cloudnative-pg/postgresql
+  postgresql: "15"
+
 cluster:
   instances: 3
   storage:
@@ -52,15 +56,3 @@ backups:
       schedule: "0 0 0 * * *"
       backupOwnerReference: self
   retentionPolicy: "30d"
-
-pooler:
-  # -- Whether to enable PgBouncer
-  enabled: false
-  # -- PgBouncer pooling mode
-  poolMode: transaction
-  # -- Number of PgBouncer instances
-  instances: 3
-  # -- PgBouncer configuration parameters
-  parameters:
-    max_client_conn: "1000"
-    default_pool_size: "25"
