--- a/helmfiles/media/helmfile.yaml
+++ b/helmfiles/media/helmfile.yaml
@@ -104,14 +104,14 @@ releases:
     application: jellyseer
   <<: *default
 
-- name: unmanic
-  chart: oci://ghcr.io/szymonrychu/helm-charts/unmanic
-  version: 0.1.2
-  namespace: media
-  labels:
-    purpose: media
-    application: unmanic
-  <<: *default
+# - name: unmanic
+#   chart: oci://ghcr.io/szymonrychu/helm-charts/unmanic
+#   version: 0.1.2
+#   namespace: media
+#   labels:
+#     purpose: media
+#     application: unmanic
+#   <<: *default
 
 - name: paperless-ngx-redis
   chart: ot-helm/redis
