--- a/helmfiles/media/values/paperless-ngx/common.yaml
+++ b/helmfiles/media/values/paperless-ngx/common.yaml
@@ -16,7 +16,8 @@ ingress:
       hosts:
         - paperless-ngx.szymonrichert.pl
 
-
+gotenbergTika:
+  enabled: true
 
 paperless_url: https://paperless-ngx.szymonrichert.pl
 
