--- a/helmfiles/authentication/helmfile.yaml
+++ b/helmfiles/authentication/helmfile.yaml
@@ -1,6 +1,4 @@
 repositories:
-- name: bitnami
-  url: https://charts.bitnami.com/bitnami
 - name: cnpg
   url: https://cloudnative-pg.github.io/charts
 templates:
@@ -45,7 +43,7 @@ releases:
 - name: keycloak
   timeout: 2400
   version: 24.1.0
-  chart: bitnami/keycloak
+  chart: oci://registry-1.docker.io/bitnamicharts/keycloak
   namespace: authentication
   needs:
   - authentication/keycloak-database
