--- a/helmfiles/authentication/values/keycloak-database/common.yaml
+++ b/helmfiles/authentication/values/keycloak-database/common.yaml
@@ -7,6 +7,12 @@ cluster:
   storage:
     size: 10Gi
     storageClass: ceph
+
+  walStorage:
+    enabled: true
+    size: 2Gi
+    storageClass: ceph
+
   resources:
     limits:
       cpu: 500m
