--- a/helmfiles/media/helmfile.yaml
+++ b/helmfiles/media/helmfile.yaml
@@ -122,47 +122,47 @@ releases:
     application: unmanic
   <<: *default
 
-- name: paperless-ngx-redis
-  chart: ot-helm/redis
-  namespace: paperless-ngx
-  version: 0.16.4
-  force: true
-  labels:
-    purpose: media
-    application: paperless-ngx-redis
-  <<: *default
+# - name: paperless-ngx-redis
+#   chart: ot-helm/redis
+#   namespace: paperless-ngx
+#   version: 0.16.4
+#   force: true
+#   labels:
+#     purpose: media
+#     application: paperless-ngx-redis
+#   <<: *default
 
-- name: paperless-ngx-database
-  chart: cnpg/cluster
-  namespace: paperless-ngx
-  version: 0.0.11
-  force: true
-  labels:
-    purpose: media
-    application: paperless-ngx-database
-  <<: *default
+# - name: paperless-ngx-database
+#   chart: cnpg/cluster
+#   namespace: paperless-ngx
+#   version: 0.0.11
+#   force: true
+#   labels:
+#     purpose: media
+#     application: paperless-ngx-database
+#   <<: *default
 
-- name: paperless-ngx
-  chart: oci://ghcr.io/szymonrychu/helm-charts/paperless-ngx
-  version: 0.1.6
-  namespace: paperless-ngx
-  labels:
-    purpose: media
-    application: paperless-ngx
-  needs:
-    - paperless-ngx/paperless-ngx-redis
-    - paperless-ngx/paperless-ngx-database
-  <<: *default
+# - name: paperless-ngx
+#   chart: oci://ghcr.io/szymonrychu/helm-charts/paperless-ngx
+#   version: 0.1.6
+#   namespace: paperless-ngx
+#   labels:
+#     purpose: media
+#     application: paperless-ngx
+#   needs:
+#     - paperless-ngx/paperless-ngx-redis
+#     - paperless-ngx/paperless-ngx-database
+#   <<: *default
 
-- name: bitmagnet-database
-  chart: cnpg/cluster
-  namespace: media
-  version: 0.0.11
-  force: true
-  labels:
-    purpose: media
-    application: bitmagnet-database
-  <<: *default
+# - name: bitmagnet-database
+#   chart: cnpg/cluster
+#   namespace: media
+#   version: 0.0.11
+#   force: true
+#   labels:
+#     purpose: media
+#     application: bitmagnet-database
+#   <<: *default
 
 # - name: bitmagnet
 #   chart: oci://ghcr.io/szymonrychu/helm-charts/bitmagnet
