feat: Migrate qbittorrent to local path and disable vpn

--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -38,9 +38,8 @@ resources:
 persistence:
   config:
     enabled: true
-    storageClass: ceph
-    type: pvc
-    size: 10Gi
+    type: hostPath
+    hostPath: /var/lib/qbittorrent
   media:
     enabled: true
     type: hostPath
